reduced code duplications